# RustVoxelEngine

./: Cargo.toml  README.md  temp.txt  testt.csv  times.csv  world_generation_times.csv
src/: main.rs  vec3.rs
src/asset_load/: mod.rs  rgba8_img.rs
src/noise_gen/: mod.rs  perlin_noise.rs  scalable_perlin_noise.rs
src/rendering/: camera_buffer_data.rs  camera_location.rs  mod.rs  world_updater.rs
src/shaders/: compute.glsl  fragment.glsl  initial_beam.glsl  secondary_beam.glsl  single_stage_march.glsl  vertex.glsl
src/shaders/compute_utils/: march.glsl  triangle.glsl
src/testing/: generation_test.rs  grid_test.rs  mod.rs  octree_test.rs
src/types/: complex_surface.rs  four_height_surface.rs  fourheightsurface.rs  geometry.rs  mod.rs  octo_voxel.rs  sphere.rs  steep_four_height_surface.rs  texture_info.rs  vec3.rs  voxel.rs
src/world/: biome_map.rs  chunk.rs  chunk_generator.rs  height_map.rs  mod.rs  octree.rs  octree_grid.rs  shader_chunk.rs  shader_grid.rs
