[package]
name = "RustVoxelEngine"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = { version = "0.34", features = ["macros"] }
vulkano-shaders = "0.34"
winit = { version = "0.30", features = ["rwh_05"]} 
image = "0.25.0"
rand = "0.9.0"
crossbeam-channel = "0.5.0"
smallvec = "1.14.0"
semaphore = "0.4.0"
chrono = "0.4.0"
mimalloc = { version = "0.1", default-features = false }